# papers-please

./: Dockerfile  countries.csv  pyproject.toml
.github/workflows/: docker.yml
papers_please/: __main__.py  captcha.py  config.py  elements.py  exceptions.py  parser.py  util.py
papers_please/locations/: accept.py  calendar.py  information.py  login.py  menu.py  page.py
tests/: test_papers_please.py
